@@ -1,3 +1,6 @@
+2009-12-28  Thomas Fischl, Dominik Fisch (www.fundf.net)
+	* Added support for libusb without dependencies to libhid 
+
 2009-12-26  1.3  Thomas Fischl, Dominik Fisch (www.fundf.net)
 	* Renamed tool. New name is 'mphidflash'.
 	* Added windows support (usb-windows.c)
